--- a/style.css
+++ b/style.css
@@ -96,10 +96,8 @@ body {
 }
 
 .nav-links {
-    padding: 1.25rem;
     border-radius: 5px;
     background-color: hsl(240, 7%, 94%);
-    margin-bottom: 1.5rem;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -108,6 +106,7 @@ body {
 
 .nav-account {
     padding: 1.25rem 0;
+    margin-bottom: 1rem;
     border-top: 1px solid var(--grayish-blue-50);
 }
 
@@ -176,10 +175,6 @@ body {
         padding: 0;
     }
 
-    .nav-account {
-        border-top: none;
-    }
-
     .nav-item {
         color: var(--white);
     }
@@ -197,19 +192,41 @@ body {
     .nav-links {
         position: absolute;
         background-color: var(--white);
+        width: 10rem;
     }
 
-    .nav-links .navbar-nav {
-        display: flex;
-        flex-direction: column;
-        
+    .nav-links a {
+        text-align: left;
     }
+
     .navbar-light .navbar-nav .nav-link {
         color: var(--very-grayish-blue);
     }
 
     .navbar-light .navbar-nav .nav-link:hover {
         color: var(--very-dark-black-blue);
+    }
+
+    .nav-account {
+        padding: 0;
+        margin-bottom: 0;
+        border-top: none;
+    }
+    
+    .nav-account button {
+        font-weight: var(--fw-bold-set-one);
+        color: var(--white);
+        border: none;
+        line-height: 1.75rem;
+        width: 8rem;
+        border-radius: 20px;
+    }
+    
+    #signup {
+        margin-top: 0;
+        color: var(--very-light-red);
+        background-image: none;
+        background-color: var(--white);
     }
 
 }
