--- a/style.css
+++ b/style.css
@@ -38,26 +38,13 @@ body {
     width: 100%;
 }
 
-.hamburger-btn::before {
-    content: url(images/icon-hamburger.svg);
-}
-
-.hamburger-btn.opened::before {
-    content: url(images/icon-close.svg);
-}
-
-.hamburger-btn {
-    border-style: none;
-    padding: 0;
-}
-
-.hamburger-btn:focus {
-    box-shadow: none;
-}
-
-.hamburger-icon {
+#close {
+    display: none;
     width: 100%;
-    height: 100%;
+}
+
+.navbar-toggler:focus {
+    box-shadow: none;
 }
 
 #navmenu {
@@ -67,41 +54,34 @@ body {
     box-shadow: 0 19px 38px rgba(0,0,0,0.30);
 }
 
-.nav-item {
-    font-family: inherit;
-    font-size: var(--fs-default);
-    font-weight: var(--fw-bold-set-one);
-    color: var(--very-dark-blue);
-    text-decoration: none;
-}
-
-.nav-btns {
-    padding: 1.25rem;
-}
-
-.nav-item-main {
+.nav-link {
     margin-bottom: 0.75rem;
 }
 
-.nav-item-main:focus {
+.nav-link:focus {
     box-shadow: none;
 }
 
-.nav-item-main::after {
+.nav-link::after {
     content: url(images/icon-arrow-dark.svg);
 }
 
-.nav-item-main[collapsed="true"]{
+.nav-link[aria-expanded="true"]{
     color: var(--very-dark-blue-75);
 }
+
+.navbar-light .navbar-nav .nav-link {
+    font-family: inherit;
+    font-size: var(--fs-default);
+    font-weight: var(--fw-bold-set-one);
+    text-decoration: none;
+    color: var(--very-grayish-blue);
+}
+
 
 .nav-links {
     border-radius: 5px;
     background-color: hsl(240, 7%, 94%);
-}
-
-.navbar-light .navbar-nav .nav-link {
-    color: var(--very-dark-blue-75);
 }
 
 .nav-account {
@@ -153,7 +133,7 @@ body {
 }
 
 #start:hover {
-    background-color: var(--light-red);
+    background-color: transparent;
     color: var(--white);
 }
 
@@ -171,20 +151,16 @@ body {
         box-shadow: none;
     }
 
-    .nav-btns {
-        padding: 0;
-    }
-
-    .nav-item {
+    .nav-link {
         color: var(--white);
     }
 
-    .nav-item-main::after {
+    .nav-link::after {
         content: url(images/icon-arrow-light.svg)
     }
 
-    .nav-item-main:hover,
-    .nav-item-main[collapsed="true"]{
+    .nav-link:hover,
+    .nav-link[aria-expanded="true"]{
         text-decoration: underline;
         color: var(--white);
     }
@@ -222,11 +198,19 @@ body {
         border-radius: 20px;
     }
     
+    #login:hover {
+        color: rgb(221, 221, 221);
+    }
+
     #signup {
         margin-top: 0;
         color: var(--very-light-red);
         background-image: none;
         background-color: var(--white);
+    }
+
+    #signup:hover {
+        color: var(--light-red);
     }
 
 }
