--- a/style.css
+++ b/style.css
@@ -119,7 +119,8 @@ body {
     font-size: inherit;
     text-align: center;
     color: white;
-    background-image: var(--vlred-to-lred);
+    background: url(images/bg-pattern-intro.svg) center no-repeat, var(--vlred-to-lred) center;
+    border-radius: 0 0 0 80px;
 }
 
 .showcase h1 {
