--- a/style.css
+++ b/style.css
@@ -76,8 +76,13 @@ body {
     margin-bottom: 0.75rem;
 }
 
-.nav-link.main::after {
+.arrow {
     content: url(images/icon-arrow-dark.svg);
+    vertical-align: middle;
+}
+
+.nav-link.main[aria-expanded="true"] .arrow {
+    transform: rotate(180deg);
 }
 
 .navbar-light .navbar-nav .nav-link[aria-expanded="true"]{
@@ -209,6 +214,7 @@ body {
     }
 
     #navmenu {
+        margin-top: 1rem;
         background-color: transparent;
         border-radius: 0;
         box-shadow: none;
@@ -216,10 +222,6 @@ body {
 
     .navbar-light .navbar-nav .nav-link.main {
         color: var(--white);
-    }
-
-    .nav-link.main::after {
-        content: url(images/icon-arrow-light.svg)
     }
 
     .navbar-light .navbar-nav .nav-link.main:hover,
@@ -248,6 +250,10 @@ body {
 
     .nav-links a {
         text-align: left;
+    }
+
+    .arrow {
+        content: url(images/icon-arrow-light.svg);
     }
 
     .navbar-light .navbar-nav .nav-link {
