--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@
     hsl(13, 100%, 72%),
     hsl(352, 100%, 62%)
   );
+  --gray-gradient-to-right: linear-gradient(
+    to left,
+    hsla(0, 0%, 98%, 0.95),
+    hsl(0, 0%, 98%)
+  );
   --vdgray-blue-to-vddesaturated-blue: linear-gradient(
     hsl(237, 17%, 21%),
     hsl(237, 23%, 32%)
@@ -258,6 +263,11 @@ h1 {
   .showcase {
     background-position-y: 35%;
   }
+  .showcase h1 {
+    font-weight: var(--fw-bold-set-one);
+    margin-bottom: 1.375rem;
+    width: 100%;
+  }
 }
 
 @media (min-width: 992px) {
@@ -363,6 +373,10 @@ h1 {
     line-height: 1em;
   }
 
+  .h2, h2 {
+    font-size: calc(1.63rem + .9vw);
+  }
+
   .showcase {
     padding-top: 15.188rem;
     padding-bottom: 9.5rem;
@@ -381,8 +395,45 @@ h1 {
     font-size: 1.375rem;
   }
 
+  .designed-for-future {
+    padding: 9.938rem 0;
+  }
+
+  .designed-for-future > h2 {
+    margin-bottom: 7.063rem;
+  }
+
   .designed-for-future img {
     margin-bottom: 0;
-    width: 100%;
+    position: absolute;
+    top: 4.438rem;
+    right: -17rem;
+    z-index: -1;
+    height: auto;
   }
+
+  .designed-for-future > div {
+    width: 76.95%;
+  }
+
+  .designed-for-future .inner-section {
+    align-self: flex-start;
+    background-image: var(--gray-gradient-to-right);
+    border-radius: 10px;
+    width: unset;
+  }
+
+  .designed-for-future .inner-section section {
+    margin-bottom: 4.75rem;
+  }
+
+  .designed-for-future .inner-section h2 {
+    text-align: left;
+    font-size: 1.75rem;
+  }
+  .designed-for-future .inner-section p {
+    text-align: left;
+    max-width: 55.5ch;
+  }
+
 }
